attempt to fix return calc on mobile

--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,3 @@ display: none;
   margin-top: 2%;
   display: inline-block;
 }
-
-.clickable {
-  cursor: pointer;
-}
